CREATE TYPE "required_actions" AS ENUM (
  'client_payment',
  'client_confirmation',
  'employee_confirmation',
  'technician_confirmation'
);

CREATE TYPE "user_role" AS ENUM (
  'manager',
  'client',
  'technician',
  'employee'
);

CREATE TYPE "device_categories" AS ENUM (
  'household_goods',
  'smart_phone',
  'tablet',
  'laptop',
  'pc',
  'printer',
  'other'
);

CREATE TYPE "warranty_type" AS ENUM (
  'basic',
  'extended'
);

CREATE TYPE "repair_status" AS ENUM (
  'pending',
  'checking_warranty',
  'in_progress',
  'completed',
  'cancelled'
);

CREATE TYPE "return_status" AS ENUM (
  'pending',
  'checking_warranty',
  'in_progress',
  'completed',
  'cancelled'
);

CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar UNIQUE NOT NULL,
  "password" varchar NOT NULL,
  "role" user_role NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "clients" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "full_name" varchar NOT NULL,
  "city" varchar,
  "phone_number" varchar,
  "email" varchar,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "technicians" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "company_name" varchar NOT NULL,
  "city" varchar NOT NULL,
  "capacity" integer DEFAULT 0,
  "max_capacity" integer NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "employees" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "branch_name" varchar NOT NULL,
  "city" varchar,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "managers" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "full_name" varchar NOT NULL,
  "email" varchar,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "devices" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "description" text,
  "color" varchar,
  "purchase_cost" double,
  "is_damaged" boolean DEFAULT false,
  "image_url" varchar,
  "warranty_id" integer,
  "category" device_categories NOT NULL DEFAULT (other),
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "warranties" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "type" warranty_type NOT NULL,
  "starts_at" timestamp NOT NULL,
  "expires_at" timestamp NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "repairs" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "status" repair_status NOT NULL DEFAULT 'pending',
  "cost" double,
  "device_id" integer NOT NULL,
  "client_id" integer NOT NULL,
  "technician_id" integer NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "returns" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "status" return_status NOT NULL DEFAULT 'pending',
  "device_id" integer NOT NULL,
  "client_id" integer NOT NULL,
  "employee_id" integer NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "notifications" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "repair_id" integer,
  "return_id" integer,
  "message" varchar NOT NULL,
  "required_actions" required_actions,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "kpis" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "metric_name" varchar NOT NULL,
  "metric_value" decimal,
  "period_start" timestamp,
  "period_end" timestamp,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

COMMENT ON COLUMN "users"."username" IS 'Email or username for login';

COMMENT ON COLUMN "technicians"."capacity" IS 'Current workload';

COMMENT ON COLUMN "technicians"."max_capacity" IS 'Maximum capacity';

COMMENT ON COLUMN "devices"."image_url" IS 'URL or path to device image';

COMMENT ON COLUMN "notifications"."repair_id" IS 'Foreign key to repairs, null if this is a return notification';

COMMENT ON COLUMN "notifications"."return_id" IS 'Foreign key to returns, null if this is a repair notification';

COMMENT ON COLUMN "kpis"."metric_name" IS 'e.g., total_repairs, total_returns, average_repair_time';

ALTER TABLE "users" ADD FOREIGN KEY ("id") REFERENCES "clients" ("user_id");

ALTER TABLE "users" ADD FOREIGN KEY ("id") REFERENCES "technicians" ("user_id");

ALTER TABLE "users" ADD FOREIGN KEY ("id") REFERENCES "employees" ("user_id");

ALTER TABLE "users" ADD FOREIGN KEY ("id") REFERENCES "managers" ("user_id");

ALTER TABLE "warranties" ADD FOREIGN KEY ("id") REFERENCES "devices" ("warranty_id");

ALTER TABLE "repairs" ADD FOREIGN KEY ("device_id") REFERENCES "devices" ("id");

ALTER TABLE "repairs" ADD FOREIGN KEY ("client_id") REFERENCES "clients" ("id");

ALTER TABLE "repairs" ADD FOREIGN KEY ("technician_id") REFERENCES "technicians" ("id");

ALTER TABLE "returns" ADD FOREIGN KEY ("device_id") REFERENCES "devices" ("id");

ALTER TABLE "returns" ADD FOREIGN KEY ("client_id") REFERENCES "clients" ("id");

ALTER TABLE "returns" ADD FOREIGN KEY ("employee_id") REFERENCES "employees" ("id");

ALTER TABLE "notifications" ADD FOREIGN KEY ("repair_id") REFERENCES "repairs" ("id");

ALTER TABLE "notifications" ADD FOREIGN KEY ("return_id") REFERENCES "returns" ("id");
